--- a/app/src/main/res/layout/age_row.xml
+++ b/app/src/main/res/layout/age_row.xml
@@ -8,10 +8,10 @@
     <TextView
         android:id="@+id/row_age"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_height="26dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
